# advent-of-code-2022

./: README.md  pyproject.toml
solutions/: __init__.py  problem_1.py  problem_10.py  problem_11.py  problem_12.py  problem_2.py  problem_3.py  problem_4.py  problem_5.py  problem_6.py  problem_7.py  problem_8.py  problem_9.py  problem_9_plt.py
