[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Python solutions for Advent of Code 2022"
authors = ["Jordan Cook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = ">=0.6"
pandas = ">=1.5"
seaborn = ">=0.12"
networkx = ">=2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true